# ReSukiSU

./: .gitattributes  1.patch  CONTRIBUTING.md  README.md  SECURITY_AUDIT.md  SECURITY_FIX_COMPARISON.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: auto-label.yml  build-manager.yml  clippy.yml  codeql.yml  ddk-lkm.yml  ksud.yml  ksuinit.yml  test_upload.yml
docs/: README.md
docs/vn/: README.md
docs/zh/: README.md
kernel/: Kbuild  Kconfig  allowlist.c  app_profile.c  arch.h  dynamic_manager.c  dynamic_manager.h  file_wrapper.c  kernel_compat.c  kernel_compat.h  kernel_umount.c  ksu.c  ksu.h  ksud.c  lsm_hooks.c  pkg_observer.c  setuid_hook.c  setup.sh  su_mount_ns.c  sucompat.c  sulog.c  supercalls.c  supercalls.h  syscall_hook_manager.c  throne_tracker.c
kernel/compat/: kernel_compat.c  kernel_compat.h
kernel/core/: init.c
kernel/feature/: adb_root.c  adb_root.h  dynamic_manager.h  selinux_hide.c  selinux_hide.h  sucompat.c  sulog.c
kernel/hook/: auto_hook.c  inline_hook.c  inline_hook_internal.h  lsm_hook_magic.c  lsm_hook_magic.h  setuid_hook.c  syscall_event_bridge.c
kernel/include/: ksu.h
kernel/infra/: file_wrapper.c
kernel/kpm/: kpm.c  super_access.c
kernel/manager/: apk_sign.c  manager.c  manager_identity.h  manager_observer.h  manager_sign.h  throne_tracker.c
kernel/policy/: allowlist.c  allowlist.h  app_profile.c
kernel/runtime/: boot_event.c  (+1 more)
manager/: .gitignore  gradle.properties
manager/app/src/main/cpp/: CMakeLists.txt  jni.c  ksu.c  ksu.h  legacy.c
scripts/: ksubot.py
uapi/: supercall.h
(+415 files in other folders)
